# hyperion

./: .clang-format  .editorconfig  .gitattributes  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  README.md  ReleaseChecklist.md  ReviewChecklist.md  SECURITY.md  codecov.yml
hypc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  CommandLineParser.cpp  CommandLineParser.h  Exceptions.h  main.cpp
libhypc/: CMakeLists.txt  libhypc.cpp  libhypc.h
liblangutil/: CMakeLists.txt  CharStream.cpp  CharStream.h  CharStreamProvider.h  Common.h  DebugInfoSelection.cpp  DebugInfoSelection.h  ErrorReporter.cpp  ErrorReporter.h  Exceptions.cpp  Exceptions.h  ParserBase.cpp  ParserBase.h  QRVMVersion.cpp  QRVMVersion.h  Scanner.cpp  Scanner.h  SemVerHandler.cpp  SemVerHandler.h  SourceLocation.cpp  SourceLocation.h  SourceReferenceExtractor.cpp  SourceReferenceExtractor.h  SourceReferenceFormatter.cpp  SourceReferenceFormatter.h  Token.cpp  Token.h  UniqueErrorReporter.h  ZVMVersion.cpp  ZVMVersion.h
libyul/: AST.h  ASTForward.h  AsmAnalysis.cpp  AsmAnalysis.h  AsmAnalysisInfo.h  AsmJsonConverter.cpp  AsmJsonConverter.h  AsmJsonImporter.cpp  AsmJsonImporter.h  AsmParser.cpp  AsmParser.h  AsmPrinter.cpp  AsmPrinter.h  CMakeLists.txt  CompilabilityChecker.cpp  CompilabilityChecker.h  ControlFlowSideEffects.h  ControlFlowSideEffectsCollector.cpp  ControlFlowSideEffectsCollector.h  Dialect.cpp  Dialect.h  Exceptions.h  FunctionReferenceResolver.cpp  FunctionReferenceResolver.h  Object.cpp  Object.h  ObjectParser.cpp  ObjectParser.h  Scope.cpp  Scope.h  ScopeFiller.cpp  ScopeFiller.h  SideEffects.h  Utilities.cpp  Utilities.h  YulStack.cpp  YulStack.h  YulString.h
libyul/optimiser/: ASTCopier.cpp  ASTCopier.h  ASTWalker.cpp  ASTWalker.h  BlockFlattener.cpp  BlockFlattener.h  BlockHasher.cpp  BlockHasher.h  CallGraphGenerator.cpp  CallGraphGenerator.h  CircularReferencesPruner.cpp  CircularReferencesPruner.h  CommonSubexpressionEliminator.cpp  CommonSubexpressionEliminator.h  ConditionalSimplifier.cpp  ConditionalSimplifier.h  ConditionalUnsimplifier.cpp  ConditionalUnsimplifier.h  ControlFlowSimplifier.cpp  ControlFlowSimplifier.h  DataFlowAnalyzer.cpp  DataFlowAnalyzer.h  DeadCodeEliminator.cpp  DeadCodeEliminator.h  Disambiguator.cpp  Disambiguator.h  EqualStoreEliminator.cpp  EqualStoreEliminator.h  EquivalentFunctionCombiner.cpp  EquivalentFunctionCombiner.h  EquivalentFunctionDetector.cpp  EquivalentFunctionDetector.h  ExpressionInliner.cpp  ExpressionInliner.h  ExpressionJoiner.cpp  ExpressionJoiner.h  ExpressionSimplifier.cpp  ExpressionSimplifier.h  ExpressionSplitter.cpp  ExpressionSplitter.h  (+82 more)
test/: CMakeLists.txt  Common.cpp  Common.h  CommonSyntaxTest.cpp  CommonSyntaxTest.h  ExecutionFramework.cpp  ExecutionFramework.h  FilesystemUtils.cpp  FilesystemUtils.h  InteractiveTests.h  Metadata.cpp  Metadata.h  QRVMHost.cpp  QRVMHost.h  TestCase.cpp  TestCase.h  TestCaseReader.cpp  TestCaseReader.h  ZVMHost.cpp  ZVMHost.h  buglistTests.js  cmdlineTests.sh  docsCodeStyle.sh  external_tests.py  hyptest.cpp  localeTest.sh  lsp.py  stopAfterParseTests.sh
test/benchmarks/: OptimizorClub.hyp  chains.hyp  run.sh  verifier.hyp
test/compilationTests/: README.md
test/contracts/: AuctionRegistrar.cpp  ContractInterface.h  Wallet.cpp
test/externalTests/: README.md  bleeps.sh  brink.sh  chainlink.sh  colony.sh  elementfi.sh  ens.sh  euler.sh  gnosis.sh  gp2.sh  perpetual-pools.sh  pool-together.sh  prb-math.py  qrns.sh  trident.sh  uniswap.sh  yield-liquidator.sh  zeppelin.sh
test/formal/: README.md  checked_int_mul_12.py  redundant_store_unrelated.py  shl_workaround_8.py
test/hypc/: CommandLineInterface.cpp  CommandLineInterfaceAllowPaths.cpp  CommandLineParser.cpp  Common.cpp  Common.h
test/libhyperion/: ABIDecoderTests.cpp  ABIEncoderTests.cpp  ABIJsonTest.cpp  ABIJsonTest.h  ABITestsCommon.h  ASTJSONTest.cpp  ASTJSONTest.h  ASTPropertyTest.cpp  ASTPropertyTest.h  AnalysisFramework.cpp  AnalysisFramework.h  Assembly.cpp  ErrorCheck.cpp  ErrorCheck.h  GasCosts.cpp  GasMeter.cpp  GasTest.cpp  GasTest.h  HyperionCompiler.cpp  HyperionEndToEndTest.cpp  HyperionExecutionFramework.cpp  HyperionExecutionFramework.h  HyperionExpressionCompiler.cpp  HyperionNameAndTypeResolution.cpp  HyperionOptimizer.cpp  HyperionParser.cpp  HyperionTypes.cpp  Imports.cpp  InlineAssembly.cpp  LibHypc.cpp  MemoryGuardTest.cpp  MemoryGuardTest.h  Metadata.cpp  NatspecJSONTest.cpp  NatspecJSONTest.h  SMTCheckerTest.cpp  SMTCheckerTest.h  SemVerMatcher.cpp  SemanticTest.cpp  SemanticTest.h  (+10 more)
test/libhyputil/: Checksum.cpp  CommonData.cpp  CommonIO.cpp  FixedHash.cpp  FunctionSelector.cpp  IpfsHash.cpp  IterateReplacing.cpp  JSON.cpp  Keccak256.cpp  LEB128.cpp  LazyInit.cpp  StringUtils.cpp  SwarmHash.cpp  TemporaryDirectoryTest.cpp  UTF8.cpp  Whiskers.cpp
test/liblangutil/: CharStream.cpp  Scanner.cpp  SourceLocation.cpp
test/libqrvmasm/: Assembler.cpp  Optimiser.cpp
test/libyul/: Common.cpp  Common.h  CompilabilityChecker.cpp  ControlFlowGraphTest.cpp  ControlFlowGraphTest.h  ControlFlowSideEffectsTest.cpp  ControlFlowSideEffectsTest.h  FunctionSideEffects.cpp  FunctionSideEffects.h  Inliner.cpp  KnowledgeBaseTest.cpp  Metrics.cpp  ObjectCompilerTest.cpp  ObjectCompilerTest.h  ObjectParser.cpp  Parser.cpp  QRVMCodeTransformTest.cpp  QRVMCodeTransformTest.h  StackLayoutGeneratorTest.cpp  StackLayoutGeneratorTest.h  StackShufflingTest.cpp  StackShufflingTest.h  SyntaxTest.cpp  SyntaxTest.h  YulInterpreterTest.cpp  YulInterpreterTest.h  YulOptimizerTest.cpp  YulOptimizerTest.h  YulOptimizerTestCommon.cpp  YulOptimizerTestCommon.h  ZVMCodeTransformTest.cpp  ZVMCodeTransformTest.h
test/libzvmasm/: Assembler.cpp  Optimiser.cpp
test/qrvmc/: CMakeLists.txt  README.md  filter_iterator.hpp  helpers.h  hex.hpp  loader.c  loader.h  mocked_host.hpp  qrvmc.h  qrvmc.hpp  utils.h
test/scripts/: test_bytecodecompare_prepare_report.py  test_externalTests_benchmark_diff.py  test_externalTests_benchmark_downloader.py  test_externalTests_parse_qrl_gas_report.py  unittest_helpers.py  (+2 more)
(+2951 files in other folders)
